cf-isucon13.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation for ISUCON13 Final
# variables
Parameters:
  AvailabilityZone:
    Type: String
    Description: Availability Zone
    Default: ap-northeast-1a
  VpcCidr:
    Type: String
    Description: VPC CIDR
    Default: "192.168.0.0/16"
  SubnetCidr:
    Type: String
    Description: Subnet CIDR
    Default: "192.168.0.0/24"
  AMI:
    Type: String
    Description: AMI ID
    Default: ami-006d211cb716fe8a0
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      CidrBlock: !Ref SubnetCidr
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: False
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
    DependsOn:
      - Subnet
      - RouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security Group for ISUCON13 Final
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: udp
          FromPort: "53"
          ToPort: "53"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: -1
          CidrIp: "192.168.0.0/24"

  InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Policies:
        - PolicyName: IsuconEC2InstancePolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                  - ec2:DescribeVolumes
                  - ec2:DescribeNetworkInterfaces
                  - ec2:DescribeSecurityGroups
                  - ec2:DescribeAvailabilityZones
                Resource: "*"
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - !Ref InstanceRole

  FinalInstance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMI
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.11"
      IamInstanceProfile: !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon13-final-1
  FinalInstanceIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref FinalInstance1
  FinalInstance2:
    Type: AWS::EC2::Instance
    Properties:
      # isucon/isucon13
      ImageId: "ami-006d211cb716fe8a0"
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.12"
      IamInstanceProfile: !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon13-final-2
  FinalInstanceIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref FinalInstance2
  FinalInstance3:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-06c947ddf8c38c43c"
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.13"
      IamInstanceProfile: !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon13-final-3
  FinalInstanceIP3:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref FinalInstance3
  BenchInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMI
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.20"
      IamInstanceProfile: !Ref InstanceProfile
      Tags:
        - Key: Name
          Value: isucon13-bench
  BenchInstanceIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref BenchInstance
